--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -24,7 +24,7 @@
             <span class="ms-Button-description">Sign out and delete the subscription</span>
         </button>
 
-        <script type="text/javascript" src="http://localhost:3001/socket.io/socket.io.js"></script>
+        <script type="text/javascript" src="http://quickdialconference.azurewebsites.net:3001/socket.io/socket.io.js"></script>
         <script type="text/javascript" src="/js/client.js"></script>
     </body>
 </html>
